Switch to using standard Kafka tools rather than KCat
KCat is no longer maintained and adds unnecessary overhead.

This is an initial commit to get functionality working, still needs some clean-up.

--- a/kafka-tools/pyproject.toml
+++ b/kafka-tools/pyproject.toml
@@ -16,7 +16,7 @@ dev = [
 ]
 
 [project.scripts]
-podcat = "kcat_cli:cli"
+ktool = "ktool:cli"
 
 [build-system]
 requires = ["setuptools>=65.0", "wheel"]
