--- a/k8s/flink/jar-server.yaml
+++ b/k8s/flink/jar-server.yaml
@@ -2,7 +2,7 @@ apiVersion: apps/v1
 kind: Deployment
 metadata:
   name: jar-server
-  namespace: default
+  namespace: flink
 spec:
   replicas: 1
   selector:
@@ -31,7 +31,7 @@ apiVersion: v1
 kind: Service
 metadata:
   name: jar-server
-  namespace: default
+  namespace: flink
 spec:
   selector:
     app: jar-server
